force-app/main/default/objects/Log_Error_Message__c/Log_Error_Message__c.object-meta.xml
<CustomObject>
    <label>Log Error Message</label>
    <nameField>
        <displayFormat>LE-{00000}</displayFormat>
        <label>Log Error Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Error Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>