force-app/main/default/objects/Log_Error_Message__c/fields/Callout_Begin_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Callout_Begin_Timestamp__c</fullName>
    <label>Callout Begin Timestamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>