force-app/main/default/objects/Log_Error_Message__c/fields/Callout_Time__c.field-meta.xml
<CustomField>
    <fullName>Callout_Time__c</fullName>
    <formula>( Callout_End_Timestamp__c - Callout_Begin_Timestamp__c ) / 1000</formula>
    <label>Callout Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>