force-app/main/default/objects/Log_Error_Message__c/fields/Dump__c.field-meta.xml
<CustomField>
    <fullName>Dump__c</fullName>
    <label>Dump</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>