force-app/main/default/objects/Log_Error_Message__c/fields/Error_message__c.field-meta.xml
<CustomField>
    <fullName>Error_message__c</fullName>
    <label>Error message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>