force-app/main/default/objects/Log_Error_Message__c/fields/Is_Error__c.field-meta.xml
<CustomField>
    <fullName>Is_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Error</label>
    <type>Checkbox</type>
</CustomField>