force-app/main/default/objects/Log_Error_Message__c/fields/NUMBER_OF_QUERIES__c.field-meta.xml
<CustomField>
    <fullName>NUMBER_OF_QUERIES__c</fullName>
    <label>NUMBER_OF_QUERIES</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>