force-app/main/default/objects/Log_Error_Message__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>