force-app/main/default/objects/Log_Error_Message__c/listViews/Errors_Today.listView-meta.xml
<ListView>
    <fullName>Errors_Today</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Dump__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Is_Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Errors - Today</label>
    <language>en_US</language>
</ListView>