force-app/main/default/objects/Log_Error_Message__c/listViews/Errors_Yesterday.listView-meta.xml
<ListView>
    <fullName>Errors_Yesterday</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Error_message__c</columns>
    <columns>Dump__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>Is_Error__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>MIDAS_SELFBOOKING</value>
    </filters>
    <label>Errors - Yesterday</label>
</ListView>