force-app/main/default/objects/Log_Error_Message__c/listViews/NCR_Retry.listView-meta.xml
<ListView>
    <fullName>NCR_Retry</fullName>
    <columns>NAME</columns>
    <columns>Is_Error__c</columns>
    <columns>Dump__c</columns>
    <columns>Error_message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sub_Type__c</field>
        <operation>equals</operation>
        <value>NCR_RETRY</value>
    </filters>
    <label>NCR Retry</label>
    <language>en_US</language>
</ListView>